[workspace]
members = [
    "fuzz",
    "stable-swap-anchor/",
    "stable-swap-client/",
    "stable-swap-math/",
    "stable-swap-math/sim",
    "stable-swap-program/program",
]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
